<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="548dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="4dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/registrarse"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_Titulo"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contrase"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/app_name"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="129dp"
            android:layout_height="56dp"
            android:layout_marginStart="140dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="Abrir camara"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/registrar"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:backgroundTint="#FF5722"
            android:insetLeft="30dp"
            android:insetTop="10dp"
            android:insetRight="30dp"
            android:insetBottom="10dp"
            android:onClick="RegisterCall"
            android:text="@string/registrar" />

        <TextView
            android:id="@+id/iniciarsesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="200dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#FF5100"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>